# hoard

./: .dockerignore  .gitignore  ANALYSIS_DB_AGENT_LOCKING.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: .env.example  Caddyfile  docker-compose.yml
docs/: CONFIDENCE_CHECKLIST.md  REMOTE_DEPLOYMENT.md
hoard/cli/: instructions.py  main.py
hoard/core/: config.py  config_schema.py  errors.py  models.py  onboarding.py  time.py  worker.py
hoard/migrations/: 001_initial_schema.py  002_write_layer_schema.py  003_migrate_memory_entries.py  (+6 more)
tests/: conftest.py  test_cli.py  test_cli_db_backup_restore.py  test_cli_http_parity.py  test_cli_init_setup.py  test_cli_instructions.py  test_cli_instructions_module.py  test_cli_orchestrate.py  test_cli_setup_remote.py  test_connectors.py  test_data_dir_paths.py  test_deploy_assets.py  test_edge_cases.py  test_http_mcp_concurrency.py  test_http_mcp_errors.py  test_http_mcp_integration.py  test_hybrid_search.py  test_inbox_put.py  test_large_ingestion.py  test_local_files_sync_search.py  test_manifest_loader.py  test_memory.py  test_migrations.py  test_orchestrator_core.py  test_orchestrator_mcp.py  test_rate_limits.py  test_retry.py  test_search_benchmark.py  test_search_unified.py  test_server_secret.py  test_stdio_mcp.py  test_sync_service.py  test_tombstone_missing.py  test_watcher_integration.py  test_worker.py  test_write_layer.py  test_write_lock.py
(+70 files in other folders)
